codage/css/reset.css
html, body, div,
h1, h2, h3, h4, h5, h6, p,
a, img, ol, ul, li,
table, td, footer, header,
menu, nav, {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
footer, header, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/*CSS POUR TOUTES LES PAGES*/
header{
  background-size: cover;
  padding-top: 20px;
}
body{
  text-align: center;
  min-width: 960px;
  margin: 0;
  padding: 0;
  font-family: 'Raleway', sans-serif;
  width:100%;
}
h1{
  margin: 0;
  text-align: center;
  letter-spacing: 0.5px;
  font-weight: 900;
  font-size: 50px;
  text-transform: uppercase;
  color: white;
  padding-top: 100px;
  padding-bottom: 50px;
}
h2{
  text-align: center;
  font-weight: 500;
  font-size: 30px;
  color: white;
  padding-bottom: 90px;
}
h3{
  margin-top: 50px;
  margin-bottom: 30px;
  font-size: 36px;
  font-style: italic;
}
a {
	text-decoration: none;
	color: black;
}
p{
  text-align: justify;
  line-height: 150%;
  text-align-last:center;
}
.intro {
  text-align: justify;
  margin: 80px 5%;
}
.wrapper{
  min-width: 960px;
  margin: 80px auto;
}

